--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -223,7 +223,9 @@
     padding: 4px 2px;
 }
 .cart__footer{
-    color : yellow;
+    width: 100%;
+    height: 50px;
+    background-color: yellow;
 }
 
 
